--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -28,15 +28,13 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - TUE 06/13/2023
 * () new:  start post #1051 on threejs-extrude-geometry
 * () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
+* () videoground: expand todo list for r9
 
 ### () - MON 06/12/2023
 * (done) edit: threejs-vector3-set-from-spherical-coords - proof read opening and getting started
-
-* () forpost: threejs-buffer-geomerty-attributes-uv - minimap debugger
-* () videoground-blog-posts: video2 for threejs-buffer-geomerty-attributes-uv
-* () edit: threejs-buffer-geomerty-attributes-uv - write about new minimap debugger
-
-* () videoground: expand todo list for r9
+* (done) forpost: threejs-buffer-geomerty-attributes-uv - minimap debugger
+* (done) videoground-blog-posts: video2 for threejs-buffer-geomerty-attributes-uv
+* (done) edit: threejs-buffer-geomerty-attributes-uv - write about new minimap debugger
 
 ### () - SUN 06/11/2023
 * (done) videoground: finish r8
