post-check;id#: 1051;v: 1.0;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -27,6 +27,8 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 ### () - TUE 06/13/2023
 * () new:  start post #1051 on threejs-extrude-geometry
+* () forpost: threejs-extrude-geometry - expand on basic section
+
 * () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
 * () videoground: expand todo list for r9
 
