--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -24,12 +24,18 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - THU 06/15/2023
 
 ### () - WED 06/14/2023
+* () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
+* () forpost: threejs-extrude-geometry - start custom UV gen section
+* () edit: threejs-extrude-geometry - write about new custom UV Section
+* () edit: threejs-extrude-geometry - write conclusion
 
 ### () - TUE 06/13/2023
-* () new:  start post #1051 on threejs-extrude-geometry
-* () forpost: threejs-extrude-geometry - expand on basic section
+* (done) new:  start post #1051 on threejs-extrude-geometry
+* (done) forpost: threejs-extrude-geometry - expand on basic section
+* (done) edit: threejs-extrude-geometry - write what to know section
 
-* () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
+* () edit: threejs-vector3 - proof read opening and what to know
+* () json: I want to work on the trees more
 * () videoground: expand todo list for r9
 
 ### () - MON 06/12/2023
