--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -33,8 +33,8 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * (done) new:  start post #1051 on threejs-extrude-geometry
 * (done) forpost: threejs-extrude-geometry - expand on basic section
 * (done) edit: threejs-extrude-geometry - write what to know section
+* (done) edit: threejs-vector3 - proof read opening and what to know
 
-* () edit: threejs-vector3 - proof read opening and what to know
 * () json: I want to work on the trees more
 * () videoground: expand todo list for r9
 
