post-check;id#: 1051;v: 1.3;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -25,15 +25,16 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 ### () - WED 06/14/2023
 * () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
-* () forpost: threejs-extrude-geometry - start custom UV gen section
-* () edit: threejs-extrude-geometry - write about new custom UV Section
-* () edit: threejs-extrude-geometry - write conclusion
+* () edit: threejs-extrude-geometry - expand on custom UV Section start demo
 
 ### () - TUE 06/13/2023
 * (done) new:  start post #1051 on threejs-extrude-geometry
 * (done) forpost: threejs-extrude-geometry - expand on basic section
 * (done) edit: threejs-extrude-geometry - write what to know section
 * (done) edit: threejs-vector3 - proof read opening and what to know
+* (done) forpost: threejs-extrude-geometry - start custom UV gen section
+* (done) edit: threejs-extrude-geometry - write about new custom UV Section
+* (done) edit: threejs-extrude-geometry - write conclusion
 
 * () json: I want to work on the trees more
 * () videoground: expand todo list for r9
