post-check;id#: 1051;v: 1.5;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -22,10 +22,24 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - FRI 06/16/2023
 
 ### () - THU 06/15/2023
+* () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
+* () forpost: threejs-extrude-geometry - 
+
 
 ### () - WED 06/14/2023
-* () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
-* () edit: threejs-extrude-geometry - expand on custom UV Section start demo
+* (done) edit: threejs-extrude-geometry - expand on custom UV Section opening
+
+* () edit: threejs-line - link to new post on Tube Geometry, proof read begining of post
+
+* () forpost: threejs-extrude-geometry - edit and expand uvgen section
+* () forpost: threejs-extrude-geometry - expand basic section by at least one demo
+* () edit: threejs-extrude-geometry - expand and edit UV and Basic Sections
+
+
+
+* () json: I want to work on the trees more
+* () videoground: expand todo list for r9
+
 
 ### () - TUE 06/13/2023
 * (done) new:  start post #1051 on threejs-extrude-geometry
@@ -35,9 +49,6 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * (done) forpost: threejs-extrude-geometry - start custom UV gen section
 * (done) edit: threejs-extrude-geometry - write about new custom UV Section
 * (done) edit: threejs-extrude-geometry - write conclusion
-
-* () json: I want to work on the trees more
-* () videoground: expand todo list for r9
 
 ### () - MON 06/12/2023
 * (done) edit: threejs-vector3-set-from-spherical-coords - proof read opening and getting started
