post-check;id#: 1051;v: 1.6;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -28,8 +28,7 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 ### () - WED 06/14/2023
 * (done) edit: threejs-extrude-geometry - expand on custom UV Section opening
-
-* () edit: threejs-line - link to new post on Tube Geometry, proof read begining of post
+* (done) edit: threejs-line - link to new post on Tube Geometry, proof read begining of post
 
 * () forpost: threejs-extrude-geometry - edit and expand uvgen section
 * () forpost: threejs-extrude-geometry - expand basic section by at least one demo
