post-check;id#: 1051;v: 1.7;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -23,18 +23,14 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 ### () - THU 06/15/2023
 * () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
-* () forpost: threejs-extrude-geometry - 
-
+* () forpost: threejs-extrude-geometry - write more about uvgen demos
 
 ### () - WED 06/14/2023
 * (done) edit: threejs-extrude-geometry - expand on custom UV Section opening
 * (done) edit: threejs-line - link to new post on Tube Geometry, proof read begining of post
-
-* () forpost: threejs-extrude-geometry - edit and expand uvgen section
-* () forpost: threejs-extrude-geometry - expand basic section by at least one demo
-* () edit: threejs-extrude-geometry - expand and edit UV and Basic Sections
-
-
+* (done) forpost: threejs-extrude-geometry - fix up code for start uv example
+* (done) forpost: threejs-extrude-geometry - expand basic section by at least one demo
+* (done) edit: threejs-extrude-geometry - expand and edit UV and Basic Sections
 
 * () json: I want to work on the trees more
 * () videoground: expand todo list for r9
