--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -22,6 +22,10 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - FRI 06/16/2023
 
 ### () - THU 06/15/2023
+
+* () start post #1052 on linux-aplay
+* () figure out how to move forward with some kind of project where I generate audo sample data to pipe into aplay
+
 * () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
 * () forpost: threejs-extrude-geometry - write more about uvgen demos
 
