post-check;id#: 853;v: 1.57;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -23,11 +23,16 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 ### () - THU 06/15/2023
 
-* () start post #1052 on linux-aplay
-* () figure out how to move forward with some kind of project where I generate audo sample data to pipe into aplay
+* () edit: threejs-box-geometry - proof read opening and what to know sections
 
-* () forpost: threejs-buffer-geometry-attributes-position - start new morph attributes section
-* () forpost: threejs-extrude-geometry - write more about uvgen demos
+* () start post #1052 on linux-aplay
+
+* () edit: threejs-extrude-geometry - write more about uvgen demos
+
+* () forpost: examples-aplay-sin
+
+* () json: I want to work on the trees more
+* () videoground: expand todo list for r9
 
 ### () - WED 06/14/2023
 * (done) edit: threejs-extrude-geometry - expand on custom UV Section opening
@@ -35,10 +40,6 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * (done) forpost: threejs-extrude-geometry - fix up code for start uv example
 * (done) forpost: threejs-extrude-geometry - expand basic section by at least one demo
 * (done) edit: threejs-extrude-geometry - expand and edit UV and Basic Sections
-
-* () json: I want to work on the trees more
-* () videoground: expand todo list for r9
-
 
 ### () - TUE 06/13/2023
 * (done) new:  start post #1051 on threejs-extrude-geometry
