post-check;id#: 853;v: 1.58;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -22,10 +22,12 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - FRI 06/16/2023
 
 ### () - THU 06/15/2023
-
-* () edit: threejs-box-geometry - proof read opening and what to know sections
+* (done) edit: threejs-box-geometry - proof read opening and what to know sections
+* (done) forpost: threejs-box-geometry - new basic example on addtional options for section count
+* (done) edit: threejs-box-geometry - write about new basic example
 
 * () start post #1052 on linux-aplay
+
 
 * () edit: threejs-extrude-geometry - write more about uvgen demos
 
