--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -25,13 +25,10 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * (done) edit: threejs-box-geometry - proof read opening and what to know sections
 * (done) forpost: threejs-box-geometry - new basic example on addtional options for section count
 * (done) edit: threejs-box-geometry - write about new basic example
-
-* () start post #1052 on linux-aplay
-
-
-* () edit: threejs-extrude-geometry - write more about uvgen demos
+* (done) start post #1052 on linux-aplay
 
 * () forpost: examples-aplay-sin
+* () edit: threejs-extrude-geometry - write more about uvgen demos
 
 * () json: I want to work on the trees more
 * () videoground: expand todo list for r9
