post-check;id#: 1052;v: 1.5;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -20,18 +20,21 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - SAT 06/17/2023
 
 ### () - FRI 06/16/2023
+* (done) edit: linux-aplay - expand with section on using nodejs to create sample data
+* () edit: threejs-extrude-geometry - write more about uvgen demos
+
+* () edit: linux-aplay - see about fixing the problem with lossed data when piping
+
+* () json: I want to work on the trees more
+* () videoground: expand todo list for r9
+
 
 ### () - THU 06/15/2023
 * (done) edit: threejs-box-geometry - proof read opening and what to know sections
 * (done) forpost: threejs-box-geometry - new basic example on addtional options for section count
 * (done) edit: threejs-box-geometry - write about new basic example
 * (done) start post #1052 on linux-aplay
-
-* () forpost: examples-aplay-sin
-* () edit: threejs-extrude-geometry - write more about uvgen demos
-
-* () json: I want to work on the trees more
-* () videoground: expand todo list for r9
+* (done) forpost: examples-aplay-sin
 
 ### () - WED 06/14/2023
 * (done) edit: threejs-extrude-geometry - expand on custom UV Section opening
