--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -18,16 +18,18 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ## () - WEEK 3 - SUN 06/11/2023 - SAT 06/17/2023
 
 ### () - SAT 06/17/2023
-
-### () - FRI 06/16/2023
-* (done) edit: linux-aplay - expand with section on using nodejs to create sample data
+* () edit: linux-aplay - write about new piping demo
 * () edit: threejs-extrude-geometry - write more about uvgen demos
+* () build and publish
 
-* () edit: linux-aplay - see about fixing the problem with lossed data when piping
+* () demos r152 : examples-aplay-sin-frames -
+* () demos r152 : examples-aplay-live - start a new demo based on the live script that I made for aplay
 
 * () json: I want to work on the trees more
 * () videoground: expand todo list for r9
 
+### () - FRI 06/16/2023
+* (done) edit: linux-aplay - expand with section on using nodejs to create sample data
 
 ### () - THU 06/15/2023
 * (done) edit: threejs-box-geometry - proof read opening and what to know sections
