--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -18,8 +18,8 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ## () - WEEK 3 - SUN 06/11/2023 - SAT 06/17/2023
 
 ### () - SAT 06/17/2023
-* () edit: linux-aplay - write about new piping demo
-* () edit: threejs-extrude-geometry - write more about uvgen demos
+* (done) edit: threejs-extrude-geometry - write more about uvgen demos
+* (done) edit: linux-aplay - write about new piping demo
 * () build and publish
 
 * () demos r152 : examples-aplay-sin-frames -
