--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -20,6 +20,10 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - SAT 06/17/2023
 * (done) edit: threejs-extrude-geometry - write more about uvgen demos
 * (done) edit: linux-aplay - write about new piping demo
+
+* () demos-linux : linux-aplay - new section on writing json files for argumnets for funcitons that generate sample data
+* () edit: demos-linux : write about new JSON file dmeo section
+
 * () build and publish
 
 * () demos r152 : examples-aplay-sin-frames -
