--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -11,6 +11,32 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * () idle-mrsun : finish r101
 * () idle-mrsun : start r102
 
+<!-------- ----------
+-- WEEK 5
+---------- --------->
+## () - WEEK 3 - SUN 06/25/2023 - FRI 06/30/2023
+
+<!-------- ----------
+-- WEEK 4
+---------- --------->
+## () - WEEK 3 - SUN 06/18/2023 - SAT 06/24/2023
+
+### () - SAT 06/24/2023
+
+### () - FRI 06/23/2023
+
+### () - THU 06/22/2023
+
+### () - WED 06/21/2023
+
+### () - TUE 06/20/2023
+
+### () - MON 06/19/2023
+
+### () - SUN 06/18/2023
+* () demos-linux : linux-aplay - new section on writing json files for arguments for functions that generate sample data
+* () edit: demos-linux : write about new JSON file dmeo section
+* () build and publish
 
 <!-------- ----------
 -- WEEK 3
@@ -21,14 +47,7 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * (done) edit: threejs-extrude-geometry - write more about uvgen demos
 * (done) edit: linux-aplay - write about new piping demo
 
-* () demos-linux : linux-aplay - new section on writing json files for argumnets for funcitons that generate sample data
-* () edit: demos-linux : write about new JSON file dmeo section
-
-* () build and publish
-
 * () demos r152 : examples-aplay-sin-frames -
-* () demos r152 : examples-aplay-live - start a new demo based on the live script that I made for aplay
-
 * () json: I want to work on the trees more
 * () videoground: expand todo list for r9
 
