post-check;id#: 475;v: 1.47;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -33,10 +33,19 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 ### () - MON 06/19/2023
 
+* () build and publish
+
 ### () - SUN 06/18/2023
+* (done) edit: threejs-box-helper - proof read
+* () edit: threejs-buffer-geometry-rotation - proof read
+
 * () demos-linux : linux-aplay - new section on writing json files for arguments for functions that generate sample data
 * () edit: demos-linux : write about new JSON file dmeo section
-* () build and publish
+
+
+* () demos r152 : examples-aplay-sin-frames -
+* () json: I want to work on the trees more
+* () videoground: expand todo list for r9
 
 <!-------- ----------
 -- WEEK 3
@@ -46,10 +55,6 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - SAT 06/17/2023
 * (done) edit: threejs-extrude-geometry - write more about uvgen demos
 * (done) edit: linux-aplay - write about new piping demo
-
-* () demos r152 : examples-aplay-sin-frames -
-* () json: I want to work on the trees more
-* () videoground: expand todo list for r9
 
 ### () - FRI 06/16/2023
 * (done) edit: linux-aplay - expand with section on using nodejs to create sample data
