post-check;id#: 871;v: 1.30;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -30,22 +30,20 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - WED 06/21/2023
 
 ### () - TUE 06/20/2023
-
-### () - MON 06/19/2023
-
 * () build and publish
 
-### () - SUN 06/18/2023
-* (done) edit: threejs-box-helper - proof read
-* () edit: threejs-buffer-geometry-rotation - proof read
+### () - MON 06/19/2023
+* (done) edit: threejs-buffer-geometry-rotation - proof read
 
 * () demos-linux : linux-aplay - new section on writing json files for arguments for functions that generate sample data
 * () edit: demos-linux : write about new JSON file dmeo section
 
-
 * () demos r152 : examples-aplay-sin-frames -
 * () json: I want to work on the trees more
 * () videoground: expand todo list for r9
+
+### () - SUN 06/18/2023
+* (done) edit: threejs-box-helper - proof read
 
 <!-------- ----------
 -- WEEK 3
