--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -30,10 +30,15 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - WED 06/21/2023
 
 ### () - TUE 06/20/2023
+* () edit : threejs-materials - proof read
+* () edit : threejs-phong-material - proof read
+
 * () build and publish
 
 ### () - MON 06/19/2023
 * (done) edit: threejs-buffer-geometry-rotation - proof read
+* () edit : threejs-spotlights - proof read
+
 
 * () demos-linux : linux-aplay - new section on writing json files for arguments for functions that generate sample data
 * () edit: demos-linux : write about new JSON file dmeo section
