--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -37,7 +37,7 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 ### () - MON 06/19/2023
 * (done) edit: threejs-buffer-geometry-rotation - proof read
-* () edit : threejs-spotlights - proof read
+* (done) edit : threejs-spotlights - proof read
 
 
 * () demos-linux : linux-aplay - new section on writing json files for arguments for functions that generate sample data
