post-check;id#: 1052;v: 1.9;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -38,12 +38,11 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - MON 06/19/2023
 * (done) edit: threejs-buffer-geometry-rotation - proof read
 * (done) edit : threejs-spotlights - proof read
+* (done) demos-linux : linux-aplay - new section on writing json files for arguments for functions that generate sample data
+* (done) edit: demos-linux : write about new JSON file dmeo section
 
+* () demos r152 : examples-aplay-sin-frames - I want to make a cool video with this
 
-* () demos-linux : linux-aplay - new section on writing json files for arguments for functions that generate sample data
-* () edit: demos-linux : write about new JSON file dmeo section
-
-* () demos r152 : examples-aplay-sin-frames -
 * () json: I want to work on the trees more
 * () videoground: expand todo list for r9
 
