--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -35,13 +35,17 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 * () build and publish
 
+* () forpost : threejs-examples-aplay-frame-scripts - start for post folder for this project
+* () forpost : threejs-examples-aplay-frame-scripts - vertarray script that works by passing a number of points that are used
+
+
+
 ### () - MON 06/19/2023
 * (done) edit: threejs-buffer-geometry-rotation - proof read
 * (done) edit : threejs-spotlights - proof read
 * (done) demos-linux : linux-aplay - new section on writing json files for arguments for functions that generate sample data
 * (done) edit: demos-linux : write about new JSON file dmeo section
-
-* () demos r152 : examples-aplay-sin-frames - I want to make a cool video with this
+* (done) demos r152 : examples-aplay-frame-scripts - start new demo on using aplay
 
 * () json: I want to work on the trees more
 * () videoground: expand todo list for r9
