post-check;id#: 181;v: 1.44;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -30,7 +30,7 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - WED 06/21/2023
 
 ### () - TUE 06/20/2023
-* () edit : threejs-materials - proof read
+* (done) edit : threejs-materials - proof read
 * () edit : threejs-phong-material - proof read
 
 * () build and publish
