post-check;id#: 1020;v: 1.12;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -15,6 +15,9 @@ I will have to keep staying in my lane with threejs of course. However at this t
 -- WEEK 5
 ---------- --------->
 ## () - WEEK 3 - SUN 06/25/2023 - FRI 06/30/2023
+* () forpost : threejs-examples-aplay-frame-scripts - start for post folder for this project
+* () forpost : threejs-examples-aplay-frame-scripts - vertarray script that works by passing a number of points that are used
+
 
 <!-------- ----------
 -- WEEK 4
@@ -26,19 +29,22 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - FRI 06/23/2023
 
 ### () - THU 06/22/2023
+* () start post #1054 on threejs-
 
 ### () - WED 06/21/2023
+* () start post #1053 on linux-
 
 ### () - TUE 06/20/2023
 * (done) edit : threejs-materials - proof read
-* () edit : threejs-phong-material - proof read
-
+* (done) edit : threejs-phong-material - proof read
 * () build and publish
 
-* () forpost : threejs-examples-aplay-frame-scripts - start for post folder for this project
-* () forpost : threejs-examples-aplay-frame-scripts - vertarray script that works by passing a number of points that are used
+* () work on r152 demos for new posts(s) this week
 
+* () videoground-beta-world - start templates for aplay videos
 
+* () json: I want to work on the trees more
+* () videoground: expand todo list for r9
 
 ### () - MON 06/19/2023
 * (done) edit: threejs-buffer-geometry-rotation - proof read
@@ -46,9 +52,6 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * (done) demos-linux : linux-aplay - new section on writing json files for arguments for functions that generate sample data
 * (done) edit: demos-linux : write about new JSON file dmeo section
 * (done) demos r152 : examples-aplay-frame-scripts - start new demo on using aplay
-
-* () json: I want to work on the trees more
-* () videoground: expand todo list for r9
 
 ### () - SUN 06/18/2023
 * (done) edit: threejs-box-helper - proof read
