post-check;id#: 1023;v: 1.14;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -27,24 +27,28 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - SAT 06/24/2023
 
 ### () - FRI 06/23/2023
+* () edit: threejs-sphere - proof read
 
 ### () - THU 06/22/2023
+* () edit: threejs-camera-move - proof read
+* () edit: threejs-buffer-geometry-attributes-color - check for post folder
 * () start post #1054 on threejs-
 
 ### () - WED 06/21/2023
+* (done) edit: threejs-shader-material - proof read
+* () edit: threejs-buffer-geometry-attributes-color - proof read
+
 * () start post #1053 on linux-
+
+* () build and publish
+
+* () work on r152 demos for new posts(s) this week
+* () json: I want to work on the trees more
+* () videoground: expand todo list for r9
 
 ### () - TUE 06/20/2023
 * (done) edit : threejs-materials - proof read
 * (done) edit : threejs-phong-material - proof read
-* () build and publish
-
-* () work on r152 demos for new posts(s) this week
-
-* () videoground-beta-world - start templates for aplay videos
-
-* () json: I want to work on the trees more
-* () videoground: expand todo list for r9
 
 ### () - MON 06/19/2023
 * (done) edit: threejs-buffer-geometry-rotation - proof read
