post-check;id#: 1053;v: 1.0;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -32,13 +32,17 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - THU 06/22/2023
 * () edit: threejs-camera-move - proof read
 * () edit: threejs-buffer-geometry-attributes-color - check for post folder
+
 * () start post #1054 on threejs-
 
 ### () - WED 06/21/2023
 * (done) edit: threejs-shader-material - proof read
+* (done) start post #1053 on linux-du
+* () edit: linux-du - expand post to at least 500 words
+
 * () edit: threejs-buffer-geometry-attributes-color - proof read
 
-* () start post #1053 on linux-
+
 
 * () build and publish
 
