--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -18,6 +18,7 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * () forpost : threejs-examples-aplay-frame-scripts - start for post folder for this project
 * () forpost : threejs-examples-aplay-frame-scripts - vertarray script that works by passing a number of points that are used
 
+* () new : linux-lsof - start new post on listing open files
 
 <!-------- ----------
 -- WEEK 4
