post-check;id#: 1024;v: 1.8;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -28,7 +28,7 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - SAT 06/24/2023
 
 ### () - FRI 06/23/2023
-* () edit: threejs-sphere - proof read
+
 
 ### () - THU 06/22/2023
 * () edit: threejs-camera-move - proof read
@@ -36,16 +36,14 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 * () start post #1054 on threejs-
 
+* () edit: threejs-sphere - proof read
+* () build and publish
+
 ### () - WED 06/21/2023
 * (done) edit: threejs-shader-material - proof read
 * (done) start post #1053 on linux-du
-* () edit: linux-du - expand post to at least 500 words
-
-* () edit: threejs-buffer-geometry-attributes-color - proof read
-
-
-
-* () build and publish
+* (done) edit: linux-du - expand post to at least 500 words
+* (done) edit: threejs-buffer-geometry-attributes-color - proof read
 
 * () work on r152 demos for new posts(s) this week
 * () json: I want to work on the trees more
