--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -34,7 +34,7 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * () edit: threejs-camera-move - proof read
 * () edit: threejs-buffer-geometry-attributes-color - check for post folder
 
-* () start post #1054 on threejs-
+* () start post #1054 on threejs-buffer-attribute
 
 * () edit: threejs-sphere - proof read
 * () build and publish
@@ -45,9 +45,14 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * (done) edit: linux-du - expand post to at least 500 words
 * (done) edit: threejs-buffer-geometry-attributes-color - proof read
 
-* () work on r152 demos for new posts(s) this week
+* () start a threejs-buffer-attribute for post folder for tomorrows new blog post on the subject
+
+* () demos 152 : examples-aplay-client - work out simple 2d graph display of sample data
+* () demos 152 : examples-aplay-client - start a module for this project
+
+* () videoground: expand todo list for r9 with features that allow for sample data rendering
+* () videoground-beta-world: figure out next step for aplay videos
 * () json: I want to work on the trees more
-* () videoground: expand todo list for r9
 
 ### () - TUE 06/20/2023
 * (done) edit : threejs-materials - proof read
