post-check;id#: 1054;v: 1.0;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -31,21 +31,12 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 
 ### () - THU 06/22/2023
+* (done) start post #1054 on threejs-buffer-attribute
 * () edit: threejs-camera-move - proof read
 * () edit: threejs-buffer-geometry-attributes-color - check for post folder
-
-* () start post #1054 on threejs-buffer-attribute
-
 * () edit: threejs-sphere - proof read
+
 * () build and publish
-
-### () - WED 06/21/2023
-* (done) edit: threejs-shader-material - proof read
-* (done) start post #1053 on linux-du
-* (done) edit: linux-du - expand post to at least 500 words
-* (done) edit: threejs-buffer-geometry-attributes-color - proof read
-
-* () start a threejs-buffer-attribute for post folder for tomorrows new blog post on the subject
 
 * () demos 152 : examples-aplay-client - work out simple 2d graph display of sample data
 * () demos 152 : examples-aplay-client - start a module for this project
@@ -53,6 +44,14 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * () videoground: expand todo list for r9 with features that allow for sample data rendering
 * () videoground-beta-world: figure out next step for aplay videos
 * () json: I want to work on the trees more
+
+
+### () - WED 06/21/2023
+* (done) edit: threejs-shader-material - proof read
+* (done) start post #1053 on linux-du
+* (done) edit: linux-du - expand post to at least 500 words
+* (done) edit: threejs-buffer-geometry-attributes-color - proof read
+* (done) start a threejs-buffer-attribute for post folder for tomorrows new blog post on the subject
 
 ### () - TUE 06/20/2023
 * (done) edit : threejs-materials - proof read
