--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -32,7 +32,7 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 ### () - THU 06/22/2023
 * (done) start post #1054 on threejs-buffer-attribute
-* () edit: threejs-camera-move - proof read
+* (done) edit: threejs-camera-move - proof read
 * () edit: threejs-buffer-geometry-attributes-color - check for post folder
 * () edit: threejs-sphere - proof read
 
