--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -33,8 +33,8 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - THU 06/22/2023
 * (done) start post #1054 on threejs-buffer-attribute
 * (done) edit: threejs-camera-move - proof read
-* () edit: threejs-buffer-geometry-attributes-color - check for post folder
-* () edit: threejs-sphere - proof read
+* (done) edit: threejs-buffer-geometry-attributes-color - check for post folder
+* (done) edit: threejs-sphere - proof read
 
 * () build and publish
 
