--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -15,10 +15,25 @@ I will have to keep staying in my lane with threejs of course. However at this t
 -- WEEK 5
 ---------- --------->
 ## () - WEEK 3 - SUN 06/25/2023 - FRI 06/30/2023
-* () forpost : threejs-examples-aplay-frame-scripts - start for post folder for this project
-* () forpost : threejs-examples-aplay-frame-scripts - vertarray script that works by passing a number of points that are used
 
+* () demos 152 : examples-aplay-client - work out simple 2d graph display of sample data
+* () demos 152 : examples-aplay-client - start a module for this project
+* () videoground: expand todo list for r9 with features that allow for sample data rendering
+* () videoground-beta-world: figure out next step for aplay videos
+* () json: I want to work on the trees more
 * () new : linux-lsof - start new post on listing open files
+
+### () - FRI 06/30/2023
+
+### () - THU 06/29/2023
+
+### () - WED 06/28/2023
+
+### () - TUE 06/27/2023
+
+### () - MON 06/26/2023
+
+### () - SUN 06/25/2023
 
 <!-------- ----------
 -- WEEK 4
@@ -29,22 +44,12 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 ### () - FRI 06/23/2023
 
-
 ### () - THU 06/22/2023
 * (done) start post #1054 on threejs-buffer-attribute
 * (done) edit: threejs-camera-move - proof read
 * (done) edit: threejs-buffer-geometry-attributes-color - check for post folder
 * (done) edit: threejs-sphere - proof read
-
 * () build and publish
-
-* () demos 152 : examples-aplay-client - work out simple 2d graph display of sample data
-* () demos 152 : examples-aplay-client - start a module for this project
-
-* () videoground: expand todo list for r9 with features that allow for sample data rendering
-* () videoground-beta-world: figure out next step for aplay videos
-* () json: I want to work on the trees more
-
 
 ### () - WED 06/21/2023
 * (done) edit: threejs-shader-material - proof read
