--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -43,13 +43,15 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - SAT 06/24/2023
 
 ### () - FRI 06/23/2023
+* (done) edit: threejs-directional-light - proof read
+* (done) edit: threejs-buffer-geometry-attributes-normals - proof read
 
 ### () - THU 06/22/2023
 * (done) start post #1054 on threejs-buffer-attribute
 * (done) edit: threejs-camera-move - proof read
 * (done) edit: threejs-buffer-geometry-attributes-color - check for post folder
 * (done) edit: threejs-sphere - proof read
-* () build and publish
+* (done) build and publish
 
 ### () - WED 06/21/2023
 * (done) edit: threejs-shader-material - proof read
