--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -45,6 +45,8 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - FRI 06/23/2023
 * (done) edit: threejs-directional-light - proof read
 * (done) edit: threejs-buffer-geometry-attributes-normals - proof read
+* () forpost: threejs-buffer-geometry-attributes-normals - more examples
+* () edit: threejs-buffer-geometry-attributes-normals - write about new examples
 
 ### () - THU 06/22/2023
 * (done) start post #1054 on threejs-buffer-attribute
