--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -28,12 +28,16 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - THU 06/29/2023
 
 ### () - WED 06/28/2023
+* () edit: threejs-object3d - proof read
 
 ### () - TUE 06/27/2023
+* () edit: threejs-depth-material - proof read
 
 ### () - MON 06/26/2023
+* () edit: threejs-light - proof read
 
 ### () - SUN 06/25/2023
+* () edit: threejs-lambert-material - proof read
 
 <!-------- ----------
 -- WEEK 4
@@ -41,12 +45,13 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ## () - WEEK 3 - SUN 06/18/2023 - SAT 06/24/2023
 
 ### () - SAT 06/24/2023
+* () edit: threejs-lambert-material - proof read
+* () forpost: threejs-buffer-geometry-attributes-normals - more examples
+* () edit: threejs-buffer-geometry-attributes-normals - write about new examples
 
 ### () - FRI 06/23/2023
 * (done) edit: threejs-directional-light - proof read
 * (done) edit: threejs-buffer-geometry-attributes-normals - proof read
-* () forpost: threejs-buffer-geometry-attributes-normals - more examples
-* () edit: threejs-buffer-geometry-attributes-normals - write about new examples
 
 ### () - THU 06/22/2023
 * (done) start post #1054 on threejs-buffer-attribute
