--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -37,7 +37,6 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * () edit: threejs-light - proof read
 
 ### () - SUN 06/25/2023
-* () edit: threejs-lambert-material - proof read
 
 <!-------- ----------
 -- WEEK 4
@@ -45,7 +44,7 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ## () - WEEK 3 - SUN 06/18/2023 - SAT 06/24/2023
 
 ### () - SAT 06/24/2023
-* () edit: threejs-lambert-material - proof read
+* (done) edit: threejs-lambert-material - proof read
 * () forpost: threejs-buffer-geometry-attributes-normals - more examples
 * () edit: threejs-buffer-geometry-attributes-normals - write about new examples
 
