post-check;id#: 980;v: 1.20;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -37,6 +37,7 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * () edit: threejs-light - proof read
 
 ### () - SUN 06/25/2023
+* (done) edit: threejs-buffer-geometry-compute-vertex-normals - proof read
 
 <!-------- ----------
 -- WEEK 4
