--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -34,7 +34,9 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * () edit: threejs-depth-material - proof read
 
 ### () - MON 06/26/2023
-* () edit: threejs-light - proof read
+* (done) edit: threejs-light - proof read
+* () forpost: threejs-light - expand and improve some demos outline in todo list
+* () edit: threejs-light - write about new demos
 
 ### () - SUN 06/25/2023
 * (done) edit: threejs-buffer-geometry-compute-vertex-normals - proof read
