post-check;id#: 859;v: 1.43;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -31,12 +31,17 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * () edit: threejs-object3d - proof read
 
 ### () - TUE 06/27/2023
-* () edit: threejs-depth-material - proof read
 
 ### () - MON 06/26/2023
 * (done) edit: threejs-light - proof read
-* () forpost: threejs-light - expand and improve some demos outline in todo list
-* () edit: threejs-light - write about new demos
+* (done) edit: threejs-depth-material - proof read
+
+* () forpost: threejs-depth-material - canvas demo of  custom section
+* () forpost: threejs-light - start nolight section
+
+* () edit: threejs-depth-material - write about new demo
+* () edit: threejs-light write about new demo
+
 
 ### () - SUN 06/25/2023
 * (done) edit: threejs-buffer-geometry-compute-vertex-normals - proof read
