--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -28,20 +28,19 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - THU 06/29/2023
 
 ### () - WED 06/28/2023
-* () edit: threejs-object3d - proof read
 
 ### () - TUE 06/27/2023
+
+* () forpost: threejs-light - start nolight section
+* () edit: threejs-light write about new demo
 
 ### () - MON 06/26/2023
 * (done) edit: threejs-light - proof read
 * (done) edit: threejs-depth-material - proof read
+* (done) forpost: threejs-depth-material - canvas demo of  custom section
+* (done) edit: threejs-depth-material - write about new demo
 
-* () forpost: threejs-depth-material - canvas demo of  custom section
-* () forpost: threejs-light - start nolight section
-
-* () edit: threejs-depth-material - write about new demo
-* () edit: threejs-light write about new demo
-
+* () edit: threejs-object3d - proof read
 
 ### () - SUN 06/25/2023
 * (done) edit: threejs-buffer-geometry-compute-vertex-normals - proof read
