--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -39,8 +39,7 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * (done) edit: threejs-depth-material - proof read
 * (done) forpost: threejs-depth-material - canvas demo of  custom section
 * (done) edit: threejs-depth-material - write about new demo
-
-* () edit: threejs-object3d - proof read
+* (done) edit: threejs-object3d - proof read
 
 ### () - SUN 06/25/2023
 * (done) edit: threejs-buffer-geometry-compute-vertex-normals - proof read
