post-check;id#: 864;v: 1.44;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -26,11 +26,13 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - FRI 06/30/2023
 
 ### () - THU 06/29/2023
+* () edit: threejs-object3d-type - poof read
 
 ### () - WED 06/28/2023
+* () edit: threejs-object3d-parent - proof read
 
 ### () - TUE 06/27/2023
-
+* (done) edit: threejs-object3d-scale - proof read
 * () forpost: threejs-light - start nolight section
 * () edit: threejs-light write about new demo
 
