--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -25,7 +25,11 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 ### () - FRI 06/30/2023
 
+* () build and publish
+
 ### () - THU 06/29/2023
+* () start post #1056 on linux-
+
 * () edit: threejs-object3d-type - poof read
 
 ### () - WED 06/28/2023
@@ -33,6 +37,10 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 ### () - TUE 06/27/2023
 * (done) edit: threejs-object3d-scale - proof read
+
+* () work on r152 demos
+* () start post #1055 on threejs-
+
 * () forpost: threejs-light - start nolight section
 * () edit: threejs-light write about new demo
 
