post-check;id#: 1055;v: 1.0;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -22,6 +22,8 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * () videoground-beta-world: figure out next step for aplay videos
 * () json: I want to work on the trees more
 * () new : linux-lsof - start new post on listing open files
+* () forpost: threejs-buffer-geometry-attributes-normals - more examples
+* () edit: threejs-buffer-geometry-attributes-normals - write about new examples
 
 ### () - FRI 06/30/2023
 
@@ -37,9 +39,8 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 ### () - TUE 06/27/2023
 * (done) edit: threejs-object3d-scale - proof read
-
-* () work on r152 demos
-* () start post #1055 on threejs-
+* (done) forpost: start threejs-texture for post folder
+* () start post #1055 on threejs-texture
 
 * () forpost: threejs-light - start nolight section
 * () edit: threejs-light write about new demo
@@ -61,8 +62,6 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 ### () - SAT 06/24/2023
 * (done) edit: threejs-lambert-material - proof read
-* () forpost: threejs-buffer-geometry-attributes-normals - more examples
-* () edit: threejs-buffer-geometry-attributes-normals - write about new examples
 
 ### () - FRI 06/23/2023
 * (done) edit: threejs-directional-light - proof read
