--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -40,7 +40,7 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - TUE 06/27/2023
 * (done) edit: threejs-object3d-scale - proof read
 * (done) forpost: start threejs-texture for post folder
-* () start post #1055 on threejs-texture
+* (done) start post #1055 on threejs-texture
 
 * () forpost: threejs-light - start nolight section
 * () edit: threejs-light write about new demo
