--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -19,11 +19,12 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * () demos 152 : examples-aplay-client - work out simple 2d graph display of sample data
 * () demos 152 : examples-aplay-client - start a module for this project
 * () videoground: expand todo list for r9 with features that allow for sample data rendering
-* () videoground-beta-world: figure out next step for aplay videos
-* () json: I want to work on the trees more
+
 * () new : linux-lsof - start new post on listing open files
 * () forpost: threejs-buffer-geometry-attributes-normals - more examples
 * () edit: threejs-buffer-geometry-attributes-normals - write about new examples
+* () forpost: threejs-light - start nolight section
+* () edit: threejs-light write about new demo
 
 ### () - FRI 06/30/2023
 
@@ -34,6 +35,8 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 * () edit: threejs-object3d-type - poof read
 
+
+
 ### () - WED 06/28/2023
 * () edit: threejs-object3d-parent - proof read
 
@@ -42,8 +45,14 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * (done) forpost: start threejs-texture for post folder
 * (done) start post #1055 on threejs-texture
 
-* () forpost: threejs-light - start nolight section
-* () edit: threejs-light write about new demo
+* () forpost: threejs-texture - have a data texture demo
+* () forpost: threejs-texture - have a texture loader demo
+* () forpost: expand todo list for future work
+* () edit: threejs-texture - write about examples thus far
+
+* () json: work on tri12 project more
+
+* () videoground-blog-posts -
 
 ### () - MON 06/26/2023
 * (done) edit: threejs-light - proof read
