post-check;id#: 1055;v: 1.5;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -44,11 +44,9 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * (done) edit: threejs-object3d-scale - proof read
 * (done) forpost: start threejs-texture for post folder
 * (done) start post #1055 on threejs-texture
-
-* () forpost: threejs-texture - have a data texture demo
-* () forpost: threejs-texture - have a texture loader demo
-* () forpost: expand todo list for future work
-* () edit: threejs-texture - write about examples thus far
+* (done) forpost: threejs-texture - have a texture loader demo
+* (done) forpost: expand todo list for future work
+* (done) edit: threejs-texture - write about examples thus far
 
 * () json: work on tri12 project more
 
