--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -47,6 +47,8 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * (done) forpost: threejs-texture - have a texture loader demo
 * (done) forpost: expand todo list for future work
 * (done) edit: threejs-texture - write about examples thus far
+* (done) forpost: threejs-object3d-position - new demos for raycatser and ox3
+* (done) edit: threejs-object3d-position - new demos
 
 * () json: work on tri12 project more
 
