--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -52,7 +52,7 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 * () json: work on tri12 project more
 
-* () videoground-blog-posts -
+* () videoground-blog-posts - video1 for threejs-texture
 
 ### () - MON 06/26/2023
 * (done) edit: threejs-light - proof read
