post-check;id#: 974;v: 1.25;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -33,12 +33,15 @@ I will have to keep staying in my lane with threejs of course. However at this t
 ### () - THU 06/29/2023
 * () start post #1056 on linux-
 
-* () edit: threejs-object3d-type - poof read
+* () edit: threejs-object3d-get-world-position - poof read
 
 
 
 ### () - WED 06/28/2023
-* () edit: threejs-object3d-parent - proof read
+* () edit: threejs-object3d-type - proof read
+* () forpost: threejs-materials - new demo
+* () edit: threejs-materials - write about new demo
+* () json: work on tri12 project more
 
 ### () - TUE 06/27/2023
 * (done) edit: threejs-object3d-scale - proof read
@@ -49,10 +52,8 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * (done) edit: threejs-texture - write about examples thus far
 * (done) forpost: threejs-object3d-position - new demos for raycatser and ox3
 * (done) edit: threejs-object3d-position - new demos
-
-* () json: work on tri12 project more
-
-* () videoground-blog-posts - video1 for threejs-texture
+* (done) edit: threejs-object3d-parent - proof read
+* (done) videoground-blog-posts - video1 for threejs-texture
 
 ### () - MON 06/26/2023
 * (done) edit: threejs-light - proof read
