post-check;id#: 974;v: 1.26;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -38,9 +38,13 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 
 ### () - WED 06/28/2023
-* () edit: threejs-object3d-type - proof read
+* (done) edit: threejs-object3d-type - proof read
+* (done) forpost: threejs-type - new types section started
+* (done) edit: threejs-object3d-type - write about new demo
+
 * () forpost: threejs-materials - new demo
 * () edit: threejs-materials - write about new demo
+
 * () json: work on tri12 project more
 
 ### () - TUE 06/27/2023
