post-check;id#: 181;v: 1.47;

--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -41,9 +41,8 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * (done) edit: threejs-object3d-type - proof read
 * (done) forpost: threejs-type - new types section started
 * (done) edit: threejs-object3d-type - write about new demo
-
-* () forpost: threejs-materials - new demo
-* () edit: threejs-materials - write about new demo
+* (done) forpost: threejs-materials - new demo
+* (done) edit: threejs-materials - write about new demo
 
 * () json: work on tri12 project more
 
