--- a/todo/today/todo_2023_06.md
+++ b/todo/today/todo_2023_06.md
@@ -35,6 +35,7 @@ I will have to keep staying in my lane with threejs of course. However at this t
 
 * () edit: threejs-object3d-get-world-position - poof read
 
+* () json: work on 0.json of set1 for tri12-bufferfly json folder project 
 
 
 ### () - WED 06/28/2023
@@ -43,8 +44,7 @@ I will have to keep staying in my lane with threejs of course. However at this t
 * (done) edit: threejs-object3d-type - write about new demo
 * (done) forpost: threejs-materials - new demo
 * (done) edit: threejs-materials - write about new demo
-
-* () json: work on tri12 project more
+* (done) json: work on tri12 project more
 
 ### () - TUE 06/27/2023
 * (done) edit: threejs-object3d-scale - proof read
